hphp/hack/test/typecheck/yield/asyncgen10.php
<?hh

async function f(): AsyncGenerator<string, string, void> {
  yield 1 => 'two';
}
